fixing input spacing

--- a/src/App.css
+++ b/src/App.css
@@ -117,40 +117,107 @@ body {
 
 #get-info {
   position: absolute;
-  left: 30%;
-  top: 40%;
-  width: 40%;
-  height: 20%;
+  left: 20%;
+  top: 30%;
+  width: 60%;
+  height: 40%;
   padding-top: 1%;
 }
 
+#trackcont {
+  position: absolute;
+  left: 10%;
+  top: 5%;
+  width: 80%;
+  height: 15%;
+}
+
+#trackURLLabel {
+  float: left;
+  margin-top: 0.5%;
+}
 #trackURL {
-  width: 60%;
-  height: 20%;
-  padding-top: 1%;
+  float: center;
+  width: 50%;
+  height: 50%;
 }
+
+#randTrack{
+  float: right;
+  left: 90%;
+  top: 0%;
+  width: 20%;
+  height: 70%;
+  background-color: transparent;
+  border-radius: 2em;
+  border: 0.2em solid #1ecd97;
+  color: #1ecd97;
+  cursor: pointer;
+  font-size: 2vmin;
+  text-transform: uppercase;
+  transition: all 0.25s ease;
+}
+
+#randTrack:hover {
+  background: #1ecd97;
+  color: #333;
+}
+
+#hexcont {
+  position: absolute;
+  left: 10%;
+  top: 30%;
+  width: 80%;
+  height: 15%;
+}
+
+#hexCodeLabel {
+  float: left;
+}
+
 #hexCode {
-  width: 30%;
-  height: 20%;
-  padding-top: 1%;
+  float: left;
+  width: 20%;
+  height: 50%;
+  margin-left: 7.5%;
+  margin-top: 0.5%;
 }
+
 #swatch {
-  position: relative;
-  top: -19.5%;
-  left: 80%;
-  width: 5%;
-  height: 20%;
+  float: left;
+  width: 2vw;
+  height: 2vw;
   border: 1px solid white;
   border-radius: 100%;
   background-color: #1ecd97;
+  margin-top: 0.25%;
+  margin-left: 7.5%;
+}
+
+#randHex{
+  float: right;
+  width: 20%;
+  height: 70%;
+  background-color: transparent;
+  border-radius: 2em;
+  border: 0.2em solid #1ecd97;
+  color: #1ecd97;
+  cursor: pointer;
+  font-size: 2vmin;
+  text-transform: uppercase;
+  transition: all 0.25s ease;
+}
+
+#randHex:hover {
+  background: #1ecd97;
+  color: #333;
 }
 
 #generate {
-  position: absolute;
-  left: 35%;
-  top: 95%;
-  width: 30%;
-  height: 35%;
+  float: center;
+  margin-top: 20%;
+  width: 25%;
+  height: 20%;
   background-color: transparent;
   border-radius: 2em;
   border: 0.2em solid #1ecd97;
